# f3-nation-slack-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.app  README.md  app_manifest.template.json  app_startup.sh  compose.yml  generate_app_manifest.sh  main.py  project.toml  pyproject.toml  requirements-scripts.txt  requirements.txt
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.devcontainer.yml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: -bulb--feature-request.md
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: 31c60a870c78_generalize_org_x_slack.py  46155d043b4c_init_migration.py  7b27e4a83947_remove_slack_id_from_org.py
apis/: user_api.py
application/: dto.py
application/ao/: __init__.py  repository.py  service.py
application/event/: command_handlers.py  commands.py
application/event_instance/: __init__.py  repository.py  service.py
application/event_tag/: __init__.py  repository.py  service.py
application/event_type/: __init__.py  repository.py  service.py
application/location/: __init__.py  repository.py  service.py
application/org/: command_handlers.py  commands.py
application/position/: __init__.py  repository.py  service.py
application/series/: __init__.py  repository.py  service.py
application/services/: org_query_service.py
db-init/: Dockerfile  README.md  entrypoint.sh
docs/: API_MIGRATION.md  API_REFERENCE.md  ARCHITECTURE.md  TESTING_STRATEGY.md
docs/api/: ao_endpoints.md  endpoint_requirements.md
domain/event/: entities.py  events.py  repository.py  value_objects.py
domain/org/: __init__.py  entities.py  events.py  repository.py  value_objects.py
f3-nation-slack-bot/: pyproject.toml
features/: achievements.py  backblast.py  backblast_legacy.py  canvas.py  config.py  connect.py  custom_fields.py  db_admin.py  downrange.py  emergency.py  help.py  paxminer_mapping.py  positions.py  preblast.py  preblast_legacy.py  region.py  reporting.py  special_events.py  strava.py  user.py  weaselbot.py  welcome.py
features/calendar/: __init__.py  ao.py  config.py  event_instance.py  event_preblast.py  event_tag.py  event_type.py  home.py  location.py  nearby_events.py  series.py
infrastructure/api_client/: __init__.py  ao_repository.py  client.py  event_instance_repository.py  event_tag_repository.py  event_type_repository.py  exceptions.py  location_repository.py  position_repository.py  series_repository.py
scripts/: Dockerfile  README.md  __init__.py  auto_preblast_send.py  award_achievements.py  backblast_reminders.py  calendar-images.py  calendar_images.py  cloudbuild.yaml  home_region_nudge.py  hourly_runner.py  kotter_reports.py  monthly_reporting.py  paxmier_migration.py  paxminer_migration.py  preblast-reminders.py  preblast_reminders.py  q_lineups.py  requirements.txt  update-special-events.py  update_slack_users.py  update_special_events.py
test/utilities/: test_helper_functions.py
tests/: conftest.py
utilities/: announcements.py  bot_logger.py  builders.py  constants.py  default_help.json  helper_functions.py  options.py  routing.py  sendmail.py
utilities/database/: diagram.py  (+5 more)
(+54 files in other folders)
