[tool.ruff]
line-length = 120

select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "C901",  # too complex
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.poetry]
name = "f3-nation-slack-bot"
version = "0.1.0"
description = ""
authors = ["Evan Petzoldt <evan.petzoldt@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
slack-bolt = "^1.18.1"
datetime = "^5.5"
cryptography = "^42.0.5"
sqlalchemy = "^2.0.28"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
pillow = "^10.2.0"
pillow-heif = "^0.15.0"
sqlalchemy-utils = "^0.41.1"
psycopg2-binary = "^2.9.9"
functions-framework = "^3.8.1"
boto3 = "^1.34.68"
pg8000 = "^1.31.2"
cloud-sql-python-connector = "^1.0.0"
google-cloud-logging = "^3.11.0"
dataframe-image = "^0.2.3"
pandas = "^2.2.2"
playwright = "^1.44.0"
alembic = "^1.13.0"
pymysql = "^1.1.1"
f3-data-models = "^0.6.0"
pre-commit = "^4.2.0"

[tool.poetry.group.dev.dependencies]
sqlalchemy-schemadisplay = "^2.0"
graphviz = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
